--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,26 +2,39 @@ name: CI
 on:
   pull_request:
     branches:
-      - "*"
+    - "*"
   push:
     branches:
-      - main
+    - main
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - uses: pre-commit/action@v2.0.0
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    # because pre-commit uses external mypy
+    - name: install mypy
+      run: |
+        pip install -U pip
+        pip install mypy -r requirements.txt
+    - uses: pre-commit/action@v3.0.0
 
   test:
-    needs: [lint]
+    strategy:
+      matrix:
+        python: ['3.10', '3.11', '3.12']
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-  # TODO
-  #
-  # release:
-  #   needs: [lint, test]
-  #   runs-on: ubuntu-latest
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python }}
+    - name: install pytest
+      run: |
+        pip install -U pip
+        pip install -r requirements.txt
+        pip install pytest
+    - run: pytest
