--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,27 +1,33 @@
 repos:
-  - repo: https://github.com/timothycrosley/isort
-    rev: 5.9.2
-    hooks:
-      - id: isort
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.5.0
+  hooks:
+  - id: check-added-large-files
+  - id: check-case-conflict
+  - id: check-executables-have-shebangs
+  - id: check-shebang-scripts-are-executable
+  - id: check-merge-conflict
+  - id: check-symlinks
+  - id: check-toml
+  - id: check-yaml
+    args: ["--allow-multiple-documents"]
+  - id: debug-statements
+  - id: trailing-whitespace
+    exclude: >-
+      ^.*.md$
 
-  - repo: https://github.com/ambv/black
-    rev: 21.6b0
-    hooks:
-      - id: black
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.2.2
+  hooks:
+  - id: ruff-format
+  - id: ruff
+    args: [ --fix, --exit-non-zero-on-fix ]
 
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
-    hooks:
-      - id: check-merge-conflict
-
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
-    hooks:
-      - id: flake8
-        additional_dependencies: ["flake8-bugbear"]
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.910
-    hooks:
-      - id: mypy
-        exclude: tests
+- repo: local
+  hooks:
+  - id: typecheck
+    name: typecheck
+    entry: mypy .
+    types: [python]
+    language: system
+    pass_filenames: false
