--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,80 @@
-[tool.black]
-target-version = ['py38']
-force-exclude = '''
-'''
+[tool.ruff]
+line-length = 121
 
-[tool.isort]
-include_trailing_comma = true
-use_parentheses = true
-multi_line_output = 3
-force_grid_wrap = 0
-line_length = 88
-length_sort = true
-lines_between_types = 1
+[tool.ruff.lint]
+ignore = [
+    # doesn't like Optional
+    # https://github.com/charliermarsh/ruff/issues/4858
+    "UP007",
+    # explicit raise from might be a bit too verbose, disable for now
+    "B904",
+    # suggest inlining complex if statements
+    "SIM108",
+    # requires ClassVar for WORDS and PATTERNS annoyingly
+    "RUF012"
+]
+select = [
+    # pyflakes
+    "F",
+    # pycodestyle
+    "E",
+    "W",
+    # isort
+    "I",
+    # flake8-bugbear
+    "B",
+    # flake8-naming
+    "N",
+    # pyupgrade
+    "UP",
+    # flake8-comprehensions
+    "C4",
+    # flake8-logging-format
+    "G",
+    # flake8-simplify
+    "SIM",
+    # flake8-use-pathlib
+    "PTH",
+    # ruff
+    "RUF",
+    # flake8-unused-arguments
+    "ARG",
+]
+fixable = [
+    "I"
+]
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
+lines-between-types = 1
+
+[tool.mypy]
+show_column_numbers = true
+show_error_codes = true
+
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_unused_ignores = true
+warn_return_any = true
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_untyped_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_incomplete_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+no_implicit_reexport = true
+strict_equality = true
+
+[[tool.mypy.overrides]]
+module = [
+    "setuptools.*",
+    "googletrans.*",
+    "PIL.*",
+    "aiocache.*",
+]
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 addopts = "-vv --cov pink_accents"
