--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,20 +102,7 @@ lines-between-types = 1
 show_column_numbers = true
 show_error_codes = true
 
-warn_redundant_casts = true
-warn_unused_configs = true
-warn_unused_ignores = true
-warn_return_any = true
-check_untyped_defs = true
-disallow_any_generics = true
-disallow_untyped_defs = true
-disallow_subclassing_any = true
-disallow_untyped_calls = true
-disallow_incomplete_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
-no_implicit_reexport = true
-strict_equality = true
+strict = true
 
 exclude = [
     # mypy goes into setuptools (?) directory for some reason even though it is gitignored
@@ -127,7 +114,7 @@ module = [
     "setuptools.*",
     "googletrans.*",
     "PIL.*",
-    "aiocache.*",
+#    "aiocache.*",
 ]
 ignore_missing_imports = true
 
